change DataTable only if within Answer

--- a/Site/webapp/css/AllApiSites.css
+++ b/Site/webapp/css/AllApiSites.css
@@ -34,7 +34,7 @@ header {
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            =Answer page (all datasets table)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.MesaComponent .DataTable .DataTable-Sticky .DataTable-Header {
+.wdk-Answer .MesaComponent .DataTable .DataTable-Sticky .DataTable-Header {
   top: 5em;;
 }
 
