--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -41,8 +41,11 @@ body.vpdb-Body {
       }
 
       @media screen and (max-width: 1000px) {
-        background-image: none;
         background-color: $primary-color;
+
+        .ebrc-HeaderBranding {
+          height: 48px;
+        }
       }
     }
 
@@ -176,6 +179,18 @@ body.vpdb-Body {
         &SearchIcon {
           left: 0.5em;
         }
+      }
+
+      @media screen and (max-width: 1000px) {
+        grid-template-areas:
+          "hamburger site-branding login"
+          "hamburger searchbar     searchbar"
+          "menubar   menubar       menubar";
+
+        grid-template-columns: auto auto 1fr;
+
+        grid-row-gap: 0.5em;
+        padding: 0.5em 0.5em 0 0.5em;
       }
     }
 
