--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -1,8 +1,8 @@
 // FIXME: Come to a consensus on the font weights we'd like to provide for Roboto
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,600,700&display=swap');
 
-$mobile-width: 1000px;
-$desktop-width: 1001px;
+$mobile-width: 1200px;
+$desktop-width: 1201px;
 
 body.vpdb-Body {
   background-image: unset;
@@ -87,12 +87,6 @@ body.vpdb-Body {
     .vpdb-Header {
       grid-area: header;
 
-      &SearchBarToggle {
-        &__hidden {
-          display: none;
-        }
-      }
-
       &__collapsed {
         display: grid;
         height: auto;
@@ -101,7 +95,6 @@ body.vpdb-Body {
         grid-template-areas:
             "site-branding searchbar social login"
             "site-branding menubar social login";
-        grid-gap: 0.5em;
 
         .ebrc-HeaderSearchBar {
           input, form {
@@ -112,14 +105,6 @@ body.vpdb-Body {
             line-height: normal;
             padding: 2px 6px;
           }
-        }
-
-        .ebrc-HeaderMenuBar > .ebrc-HeaderMenuItemGroup > .ebrc-HeaderMenuItemContent {
-          padding: 0 0.5em;
-        }
-
-        @media screen and (max-width: $mobile-width) {
-          height: auto;
         }
 
         .ebrc-HeaderBrandingContainer {
@@ -137,6 +122,14 @@ body.vpdb-Body {
   
         .UserMenu {
           align-self: flex-end;
+        }
+
+        @media screen and (min-width: $desktop-width) {
+          grid-gap: 0.5em;
+
+          .ebrc-HeaderMenuBar > .ebrc-HeaderMenuItemGroup > .ebrc-HeaderMenuItemContent {
+            padding: 0 0.5em;
+          }
         }
       }
 
@@ -296,10 +289,6 @@ body.vpdb-Body {
         display: flex;
         flex-direction: column;
       }
-    }
-
-    &__header-collapsed {
-      grid-template-rows: 5.5em 1fr auto;
     }
 
     /**** VEUPATH SITES ***/
