Restrict grid-template-rows to only be applied at desktop-width

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -291,6 +291,12 @@ body.vpdb-Body {
       }
     }
 
+    @media screen and (min-width: $desktop-width) {
+      &__header-collapsed {
+        grid-template-rows: 5.5em 1fr auto;
+      }
+    }
+
     /**** VEUPATH SITES ***/
     // eupath  bkgrnd 
     &.AmoebaDB {
