Adjust position of search page sticky header for mobile-width

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -487,5 +487,9 @@ body.vpdb-Body {
   // Fix for question page sticky header
   .wdk-QuestionFormQuestionHeader {
     top: 5.5em;
+
+    @media screen and (max-width: $mobile-width) {
+      top: 0;
+    }
   }
 }
