Add height for persistent announcements grid row

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -313,7 +313,7 @@ body.vpdb-Body {
 
     @media screen and (min-width: $desktop-width) {
       &__header-collapsed {
-        grid-template-rows: 5.5em 1fr auto;
+        grid-template-rows: 5.5em auto 1fr auto;
       }
     }
 
