Header styling: switch out rems for ems

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -144,7 +144,7 @@ body.vpdb-Body {
       }
 
       .vpdb-SubmenuDivider {
-        padding: 0.5rem 0.125rem;
+        padding: 0.5em 0.125em;
         border-top: 0.0625rem solid gray;
         border-bottom: 0.0625rem solid gray;
         font-weight: bold;
