Give the searches tree in the Searches menu a min-width

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -175,6 +175,10 @@ body.vpdb-Body {
         }
       }
 
+      .wdk-CheckboxTree {
+        min-width: 18.75em;
+      }
+
       .wdk-CheckboxTreeLinks {
         margin-left: 0;
       }
