--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -1,6 +1,10 @@
 // FIXME: Come to a consensus on the font weights we'd like to provide for Roboto
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,600,700&display=swap');
 
+// Header breakpoints
+$hamburger-width: 1200px;
+
+// Search Pane + Main + News breakpoints
 $tablet-width: 1000px;
 $mobile-width: 900px;
 $small-mobile-width: 415px;
@@ -47,9 +51,7 @@ body.vpdb-Body {
         }
       }
 
-      @media screen and (max-width: $mobile-width) {
-        background-color: $primary-color;
-
+      @media screen and (max-width: $hamburger-width) {
         .ebrc-HeaderBranding {
           height: $small-branding-height;
         }
@@ -142,7 +144,7 @@ body.vpdb-Body {
           row-gap: 0.5em;
           padding: 0 0.5em;
 
-          @media screen and (max-width: $mobile-width) {
+          @media screen and (max-width: $hamburger-width) {
             padding: 0.5em;
           }
         }
@@ -196,7 +198,7 @@ body.vpdb-Body {
         }
       }
 
-      @media screen and (max-width: $mobile-width) {
+      @media screen and (max-width: $hamburger-width) {
         position: relative;
 
         grid-template-areas:
@@ -503,6 +505,10 @@ body.vpdb-Body {
         overflow: hidden;
       }
 
+      @media screen and (max-width: $hamburger-width) {
+        grid-template-rows: auto auto 1fr auto;
+      }
+
       @media screen and (max-width: $tablet-width) {
         grid-template-areas:
           "header header header"
@@ -555,7 +561,7 @@ body.vpdb-Body {
   .wdk-QuestionFormQuestionHeader {
     top: 5.5em;
 
-    @media screen and (max-width: $mobile-width) {
+    @media screen and (max-width: $hamburger-width) {
       top: 0;
     }
   }
