--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -113,6 +113,7 @@ body.vpdb-Body {
       "content"
       "footer";
     
+    grid-template-rows: $expanded-header-height auto 1fr auto;
     grid-template-columns: 100%;
   
     min-height: 100vh;
@@ -122,6 +123,8 @@ body.vpdb-Body {
       box-shadow: 0 2px 4px #00000066;
 
       &__expanded {
+        position: relative;
+
         @media screen and (max-width: $cramped-header-width) {
           grid-template-areas:
             "site-branding .         project-branding project-branding "
@@ -364,14 +367,6 @@ body.vpdb-Body {
       }
     }
 
-    &__header-expanded {
-      grid-template-rows: $expanded-header-height auto 1fr auto;
-    }
-
-    &__header-collapsed {
-      grid-template-rows: $collapsed-header-height auto 1fr auto;
-    }
-
     /***** PORTAL *******/
     &.VEuPathDB, &.EuPathDB {
       .vpdb-Header {
@@ -404,8 +399,6 @@ body.vpdb-Body {
         "banner banner banner"
         "nav content side"
         "footer footer footer";
-
-      grid-template-rows: $expanded-header-height auto 1fr auto;
 
       .vpdb-Main {
         overflow: hidden;
