Small adjustments to when the transition from expanded -> collapsed header occurs, and how the question page's sticky header is positioned

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -458,7 +458,7 @@ body.vpdb-Body {
 
   // Fix for question page sticky header
   .wdk-QuestionFormQuestionHeader {
-    top: $expanded-header-height;
+    top: $collapsed-header-height;
 
     @media screen and (max-width: $hamburger-width) {
       top: 0;
