--- a/Site/webapp/wdkCustomization/js/client/components/Srt.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/Srt.scss
@@ -1,16 +1,10 @@
 .vpdb-Srt {
-  &--ChoicesHeader {
-    text-align: center;
-  }
-
-  &--ChoicesLinks {
-    font-size: 1.3em;    
-    text-align: center;
-  }
-
   &--BulkDownloadLink {
     font-size: 1.3em;
-    margin-top: 2em;
+  }
+
+  ul.wdk-RadioList.vpdb-Srt--RecordTypeChoicesInput {
+    margin: 2em;
   }
 
   &--IdsInput {
