SRT/Cleanup: use uniform styling for the record type and id list input

--- a/Site/webapp/wdkCustomization/js/client/components/Srt.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/Srt.scss
@@ -3,11 +3,7 @@
     font-size: 1.3em;
   }
 
-  ul.wdk-RadioList.vpdb-Srt--RecordTypeChoicesInput {
-    margin: 2em;
-  }
-
-  &--IdsInput {
+  &--RecordTypeInput, &--IdsInput {
     margin: 2em;
   }
 }
