SRT: Use tabs to partition forms; memoize the form configs

--- a/Site/webapp/wdkCustomization/js/client/components/Srt.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/Srt.scss
@@ -3,7 +3,11 @@
     font-size: 1.3em;
   }
 
-  &--RecordTypeInput, &--IdsInput {
+  &--SrtForms {
+    margin-top: 3em;
+  }
+
+  &--IdsInput {
     margin: 2em;
   }
 }
