veupathdb primary color

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -448,11 +448,11 @@ body.vpdb-Body {
   }
 
   .vpdb-BgDark {
-    background-color: #00304c;
+    background-color: #02385a;
   }
 
   .vpdb-BdDark {
-    border-color: #00304c; 
+    border-color: #02385a; 
   }
 
   .vpdb-BgWash {
