Display truncated footer when viewing JBrowse

--- a/Site/webapp/wdkCustomization/js/client/components/Jbrowse.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/Jbrowse.scss
@@ -6,4 +6,8 @@ body.vpdb-Body .vpdb-RootContainer__jbrowse {
       border: none;
     }
   }
+
+  .ebrc-FooterPageDescriptionRow {
+    display: none;
+  }
 }
