--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -3,8 +3,21 @@
 @import 'ebrc-client/styles/themes.scss';
 
 // Header breakpoints
-$cramped-header-width: 1100px;
-$hamburger-width: 960px;
+$cramped-header-width: 1215px;
+$hamburger-width: 1013px;
+
+@include themify() {
+  $special-cramped-header-width: themed('special-cramped-header-width');
+  $special-hamburger-width: themed('special-hamburger-width');
+
+  @if ($special-cramped-header-width) {
+    $cramped-header-width: $special-cramped-header-width !global;
+  }
+
+  @if ($special-hamburger-width) {
+    $hamburger-width: $special-hamburger-width !global;
+  }
+}
 
 // Search Pane + Main + News breakpoints
 $tablet-width: 1000px;
