--- a/Site/webapp/wdkCustomization/js/client/styles/news.scss
+++ b/Site/webapp/wdkCustomization/js/client/styles/news.scss
@@ -1,3 +1,5 @@
+@import '~site/wdkCustomization/js/client/styles/breakpoints.scss';
+
 body.vpdb-Body .vpdb-RootContainer {
   .vpdb-NewsPane {
     grid-area: side;
